--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ h2 {
 
 /*Maps section*/
 
-#map {
+.map-custom {
     height: 30rem;
     width: 100%;
     border: 0.1rem solid rgb(2, 194, 62);
