Add new comments in each page creditting various code sources

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto: 100,200,300,400,500,600,700|Exo: 100,200,300,400,500,600,700&display=swap');
 
+/* Credit code sources for slideshow, navigation, bottom nav and scroll to top button - https://www.w3schools.com/*/
+/*Find links to each individual site page in README.md*/
+
 html {
     scroll-behavior: smooth;
 }
