--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,7 @@ h2 {
 }
 
 /*Maps section*/
-.map-custom {
+.home-map-custom {
     height: 30rem;
     width: 100%;
     border: 0.1rem solid rgb(2, 194, 62);
