--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ h2 {
 .dropdown-content a:hover {
   background-color: rgb(2, 194, 62);
   color: rgb(2, 1, 1, 0.904);
+  border: 0.1em solid rgb(2, 1, 1, 0.904);
 }
 
 .dropdown:hover .dropdown-content {
@@ -98,7 +99,7 @@ h2 {
 /*homepage header*/
 .banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -116,7 +117,7 @@ h2 {
 /*smooth transitions*/
 .banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -124,7 +125,7 @@ h2 {
 /*cheddar header page*/
 .cheddar-banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://images.pexels.com/photos/3969285/pexels-photo-3969285.jpeg?cs=srgb&dl=cheddar-gorge-3969285.jpg&fm=jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -142,7 +143,7 @@ h2 {
 /*Ensure smooth banner transition*/
 .cheddar-banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -159,7 +160,7 @@ h2 {
 /*blagdon banner*/
 .blagdon-banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://upload.wikimedia.org/wikipedia/commons/b/b7/Blagdonlake2.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -175,7 +176,7 @@ h2 {
 
 .blagdon-banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -192,7 +193,7 @@ h2 {
 /*staple banner*/
 .staple-banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://upload.wikimedia.org/wikipedia/commons/7/79/The_Malverns_from_Cleeve_Hill_%284966%29.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -208,7 +209,7 @@ h2 {
 
 .staple-banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -225,7 +226,7 @@ h2 {
 /*exmoor banner*/
 .exmoor-banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://upload.wikimedia.org/wikipedia/commons/9/95/Exmoor_National_Park.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -241,7 +242,7 @@ h2 {
 
 .exmoor-banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -258,7 +259,7 @@ h2 {
 /*coastal banner*/
 .coastal-banner {
     width: 100%;
-	height: 35em;
+	height: 30em;
 	background: url("https://live.staticflickr.com/7433/13432939784_6087d5241b_b.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
@@ -274,7 +275,7 @@ h2 {
 
 .coastal-banner-outer {
     width: 100%;
-    height: 35em;
+    height: 30em;
     overflow:hidden;
     position: relative;
 }
@@ -448,7 +449,10 @@ h2 {
 }
 
 /*change color of links when hovered over*/
-.bottom-nav .dropup-content a:hover {background-color: rgb(2, 194, 62);}
+.bottom-nav .dropup-content a:hover {
+    background-color: rgb(2, 194, 62);
+    border: 0.1em solid rgb(2, 1, 1, 0.904);
+}
 
 /*show dropup menu*/
 .bottom-nav .dropup:hover .dropup-content {
