add font images for readme.mdd

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ h2 {
 
 /*Navigation section*/
 .topnav {
-  background-color: rgba(252, 214, 0, 0.664);
+  background-color: rgb(252, 214, 0, 0.664);
   overflow: hidden;
   z-index: 3;
 }
