--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,17 +293,17 @@ h2 {
 * {box-sizing:border-box}
 
 .mySlides {
-    display: none;
-    vertical-align: middle;
-    margin: auto;
-    }
+display: none;
+vertical-align: middle;
+margin: auto;
+}
 
 /*slideshow images*/
 img {
-    width: 100%;
-    height: 18em;
-    text-align: center;
-    }
+width: 100%;
+height: 18em;
+text-align: center;
+}
 
 /* Slideshow container*/
 .slideshow-container {
@@ -387,29 +387,68 @@ img {
   .text {font-size: 1em}
 }
 
+/*desktop screen size*/
 @media screen and (max-width: 75em) {
 
-    img .mySlides .slideshow-container {
+    img  {
         width: 100%;
-        height: 20em;
+        height: 12em;
         text-align: center;
     }
 }
 
+/*tablet screen size*/
+@media screen and (max-width: 64em) {
+
+    img  {
+        width: 100%;
+        height: 14em;
+        text-align: center;
+    }
+}
+
+/*tablet slideshow-container*/
+@media screen and (max-width: 64em) {
+
+    .slideshow-container {
+        width: 95%;
+        height: 14em;
+        text-align: center;
+    }
+}
+
+/*mobile screen size*/
 @media screen and (max-width: 37.5em) {
     
-    img .mySlides .slideshow-container {
-        width: 100%;
-        height: 20em;
+    img {
+        width: 95%;
+        height: 10em;
         text-align: center;
     }
 }
 
 @media screen and (max-width: 18.75em) {
-    img .mySlides .slideshow-container {
-        width: 100%;
-        height: 20em;
+    img  {
+        width: 90%;
+        height: 7em;
         text-align: center;
+    }
+}
+
+/*slideshow container mobile*/
+@media screen and (max-width: 37.5em) {
+    .slideshow-container {
+    width: 100%;
+    height: 10em;
+    text-align: center;
+    }
+}
+
+@media screen and (max-width: 18.75em) {
+    .slideshow-container {
+    width: 100%;
+    height: 10em;
+    text-align: center;
     }
 }
 
